static/css/style.css
/* ... */
@media (max-width: 1160px) {
  .card ul li {
    line-height: 150%;
  }
}

@media (max-width: 992px) {
  main {
    padding-left: 0px;
    padding-top: 64px;
  }
  ul.side-nav a {
    line-height: 100%;
    padding: 0;
    width: 100%;
  }
  nav {
    background: #fff;
    height: 64px;
    position: absolute;
  }
  nav a.button-collapse, nav a.button-collapse i {
    color: #009688;
    height: 56px;
    line-height: 56px;
  }
  h3 {
    padding: 20px 30px;
    margin-bottom: 40px;
  }
  .container {
    margin: 0 auto;
  }
  nav.hide-on-large.only.trigger {
    display: block;
    position: fixed;
    top: 0;
    z-index: 2;
  }
  .name-title {
    display: block;
    height: 100%;
    padding-top: 15px;
    text-align: center;
    width: 100%;
    position: absolute;
  }
  .name-title>span, .name-title>a {
    position: relative;
    line-height: 20px;
  }
  .name-title a {
    font-size: 22px;
    display: block;
  }
  .name-title span {
    display: block;
    font-size: 14px;
  }
  h3, .container {
    position: relative;
    top: 64px;
  }
  section#intro {
    margin-bottom: -64px;
  }
  /* .card .role {
    position: relative;
    right: initial;
    top: initial;
    font-size: 1.25rem;
  } */
}

@media (max-width: 600px) {
  h2 {
    font-size: 32px;
    line-height: 200%;
    margin: 30px 0 0;
  }
  /* #intro.section .container *:not(span) {
    padding: 0;
  } */
  .card .card-content .card-title {
    font-size: 20px;
    line-height: 24px;
  }
  #experience span.card-title {
    text-align: center;
    display: block;
  }
  #experience span.card-title a {
    margin: 0;
  }
  i.mdi-navigation-close.right {
    position: relative;
    bottom: 15px;
  }
  #contact a:not(.btn-floating) {
    text-align: center;
    display: block;
    left: initial;
    bottom: initial;
    width: fit-content;
    margin: 0 auto; /* Center the element horizontally */
    margin-bottom: 30px;
  }
  #contact a.btn-floating.btn-large {
    display: block;
    text-align: center;
    margin: 0 auto;
  }
  #intro.section {
    background-position-x: 30%;
  }
  .container .flow-text {
    font-size:95%;
    font-weight:300;
  }
  blockquote * {
    font-size: 100%;
  }
}

.logo-img {
  position: absolute;
  width: 250px;
  height: auto;
  transition: all 0.3s ease-in-out;
}

.card .logo-img {
  position: absolute;
  right: 62px;
  top: 15px;
}

.custom-col {
  width:50%;
  height:auto;
}

@media screen and (max-width: 992px) {

  .custom-col {
    width: 60%;
    height:auto;
    /* margin-left: auto;
    margin-right: auto; */
  }
  .card .role {
    font-size: 1.25rem;
  }
}

/* Default - no line break */
.break-on-smaller {
  display: none;
}

/* On small screens, show the <br> element */
@media (max-width: 850px) {
  .break-on-smaller {
      display: inline;
  }
  .card .role {
    text-align: center;
    top: 25px;
  }
}

@media screen and (max-width: 700px) {
  .custom-col {
    width: 100%;
    height:auto;
  }
  .card .role {
    position: relative;
    right: initial;
    top: initial;
    font-size: 1.25rem;
    text-align: start;
  }
  .break-on-smaller {
    display: none;
  }
}

@media screen and (max-width: 992px) {
  .card .logo-img {
    position: absolute; /* Change to absolute positioning */
    top: 20px; /* Adjust the top position as needed */
    right: 45px; /* Adjust the right position as needed */
    width: 200px; /* Adjust the width as needed */
    height: auto; /* Maintain the aspect ratio */
  }
}

@media screen and (max-width: 700px) {
  .card .logo-img {
    position: absolute; /* Change to absolute positioning */
    top: 25px; /* Adjust the top position as needed */
    right: 45px; /* Adjust the right position as needed */
    width: 150px; /* Adjust the width as needed */
    height: auto; /* Maintain the aspect ratio */
  }
}

@media screen and (max-width: 600px) {
  .card .logo-img {
    position: absolute; /* Change to absolute positioning */
    right: 30px; /* Adjust the right position as needed */
    width: 120px; /* Adjust the width as needed */
    height: auto; /* Maintain the aspect ratio */
  }
}

@media screen and (max-width: 500px) {
  .card .logo-img {
    position: relative; /* Change to absolute positioning */
    top:15px;
    left: 0px; /* Adjust the right position as needed */
    width: 130px; /* Adjust the width as needed */
    height: auto; /* Maintain the aspect ratio */
    margin-bottom: -30px;
  }
}

/* Default - no line break */
.break-on-small {
  display: none;
}

/* On small screens, show the <br> element */
@media (max-width: 1165px) {
  .break-on-small {
      display: inline;
  }
}


/* @media screen and (max-width: 1200px) {
  .logo-img {
    right: 132px;
    width: 220px;
  }
}

@media screen and (max-width: 992px) {
  .logo-img {
    right: 92px;
    width: 200px;
  }
}

@media screen and (max-width: 768px) {
  .logo-img {
    right: 72px;
    width: 175px;
  }
}

@media screen and (max-width: 600px) {
  .logo-img {
    right: 10px;
    width: 140px;
  }
} */

/* @media screen and (max-width: 480px) {
  .logo-img {
    right: 10px;
    width: 110px;
  }
} */

